@@ -31,7 +31,8 @@ first "/~/" or "/~user/" is expanded to the specified home directory.
 
   When run in a repository that does not yet have an annex.uuid, one
   will be created, as long as a git-annex branch has already been pushed to
-  the repository.
+  the repository, or if the autoinit= flag is used to indicate
+  initialization is desired.
 
 * inannex directory [key ...]
 
@@ -95,7 +96,7 @@ to git-annex-shell are:
   on new dashed options).
 
   Currently used fields include remoteuuid=, associatedfile=,
-  and direct=
+  direct=, and autoinit=
 
 # HOOK
 
